# s3proxy

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml
src/: credentials.rs  main.rs  router.rs  s3_handler.rs  xml_writer.rs
