[package]
name = "s3proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "0.36"
bytes = "1.1"
futures-util = "0.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_urlencoded = "0.7.1"
aws-config = "0.57.2"
aws-types = "0.57.2"
tokio-util = "0.7.10"
quick-xml = { version  = "0.31.0", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
sha2 = "0.10.8"

[profile.release]
strip = true
