[package]
name = "s3proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = { version = "0.36" }
bytes = "1.1"
futures-util = "0.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio-util = "0.7.10"
quick-xml = { version  = "0.31.0", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
sha2 = "0.10.8"
reqwest = "0.11.22"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.108"
clap = { version = "4.4.8", features = ["derive", "env"] }
blake3 = { version = "1.5.0", features = ["neon"] }

[profile.release]
strip = true
lto = "fat"
